@@ -1,4 +1,10 @@
 
+Изменения в nginx 1.0.8                                           01.10.2011
+
+    *) Исправление: nginx не собирался с модулем ngx_http_mp4_module и без
+       параметра --with-debug.
+
+
 Изменения в nginx 1.0.7                                           30.09.2011
 
     *) Изменение: теперь, если суммарный размер всех диапазонов больше
